@@ -115,6 +115,7 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-213 (27 may 2011 - ???) SLOC ??? UT ??? FT ??:??
+- (1) Implement deep copy and assignment for gsConnection and Brush (incomplete)
 
 * v0.0.5-212 (19 mar 2011 - 27 may 2011) SLOC 43,269 UT 270 FT 100:03
 - Started Font's unittests implementation
